--- a/public/index.html
+++ b/public/index.html
@@ -6,14 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="Virtualized-list application"
-      content="A simple Virtualized-list"
+      name="React Autcomplete"
+      content="A simple React Autcomplete"
     />
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400&display=swap" rel="stylesheet">
-    <link type="text/css" rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <title>Autcomplete</title>
